--- a/styles.css
+++ b/styles.css
@@ -49,17 +49,16 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    /* color: #f8f8f8; */
-     color: #191827;
-    /* background-color: #1c1c1c; */
-    background-color: #f8f8f8;
+    color: #f8f8f8;
+     /* color: #191827; */
+    background-color: #1c1c1c;
+    /* background-color: #f8f8f8; */
     
     padding: 10px 20px;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    transform: translateY(-940px);
+    transform: translateY(-900px);
     transition: opacity 0.3s ease, transform 0.3s ease;
     /* display: none; */
     opacity: 0;
 }
-
