--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-
- body {
+body {
             background-color: #f8f8f8; 
             color: #25313e;
             font-family: Arial, sans-serif;
@@ -46,33 +45,7 @@
         .section {
             margin-top: 40px;
         }
-#notification {
-    color: #f8f8f8;
-     /* color: #191827; */
-    background-color: #1c1c1c;
-    /* background-color: #f8f8f8; */
-    
-    padding: 10px 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    /* display: none; */
-    opacity: 0;
-}
-#notification2 {
-    color: #f8f8f8;
-     /* color: #191827; */
-    background-color: #1c1c1c;
-    /* background-color: #f8f8f8; */
-    
-    padding: 10px 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    /* display: none; */
-    opacity: 0;
-}
-#notification3 {
+.notif {
     color: #f8f8f8;
      /* color: #191827; */
     background-color: #1c1c1c;
